# job-screener

./: .gitignore  README.md  main.py  prompt.py  prompt.txt  pyproject.toml  resume.txt  test.ipynb
outputs/: output_2025-06-18.xlsx  output_2025-06-19.xlsx
serp_extract/: serp_2025-06-18.csv  serp_2025-06-19.csv
src/: main.py  prompt.py
